--- a/public/index.html
+++ b/public/index.html
@@ -29,21 +29,22 @@
 
       // Grab the specifically formatted message string 
       var clientId = splitMsg[0].slice(0,9);
-      var msg = ": " + splitMsg[1];
-      var sequenceNumber = "sequence: "+splitMsg[2];
-      var trimmedHash = "runningHash: "+splitMsg[3].slice(0,6) + "...";
-      var consensusTimestamp = "timestamp: " + splitMsg[4].slice(0,25);
+      var msg = splitMsg[1];
+      var sequenceNumber = splitMsg[2];
+      var trimmedHash = "runningHash: "+splitMsg[3].slice(0,4) + "..";
+      var trimmedTimestamp = splitMsg[4].slice(0,25);
 
       // Append the split message to our HTML in pieces
       $("#messages").append(
         $("<li>").addClass("new-message").append(
           $("<div>").addClass("message").append( 
             $("<p>").text(clientId).addClass("client")).append(
-            $("<p>").text(msg).addClass("message-content"))).append(
+              $("<div>").addClass("message-body").append( 
+                $("<div>").text(msg).addClass("message-content")).append(
+                $("<div>").text(trimmedTimestamp).addClass("message-timestamp")))).append(
           $("<div>").addClass("meta").append( 
-            $("<p>").text(sequenceNumber).addClass("details")).append(
-            $("<p>").text(trimmedHash).addClass("details")).append(
-            $("<p>").text(consensusTimestamp).addClass("details"))))
+            $("<p>").text("sequence: "+ sequenceNumber).addClass("details")).append(
+            $("<p>").text(trimmedHash).addClass("details"))))
 
       // Update the current sequence #
       $("#sequence-number").text("last message sequence number: " + splitMsg[2] + "  ");
