--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   </head>
   <script src="/socket.io/socket.io.js"></script>
   <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
-  <script src="./index.js"></script>
+  <script src="/index.js"></script>
   <body>
     <div class="chat">
       <div class="side-panel">
