--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
           <ul id="messages">
           </ul>
           <form id="form" action="">
-            <input id="m" autocomplete="off" placeholder="Type a message here"/><button>Send</button>
+            <input id="m" autocomplete="off" placeholder="Type a message here"/><button alt="send"> </button>
           </form>
         </div>
       </div>
